[package]
name = "pitch-pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-buffer = "0.1.7"
num = "0.4.1"
one-euro = "0.6.0"
nalgebra = { version = "0.32.1", default-features = false, features = ["std"] }
